# Regex_Benchmark

./: CMakeLists.txt  GPU_Parallel.cu  NFA_Pointer_Parallel.cpp  NFA_Pointer_Single.cpp  NFA_pointer.cpp  README.md  parallel_test.cpp  plot.py  plot_both.py  results.csv  single_thread_test.cpp
